--- a/.woodpecker/.feature.yml
+++ b/.woodpecker/.feature.yml
@@ -1,9 +1,14 @@
 pipeline:
   build-and-push:
-    image: plugins/docker
+    image: woodpeckerci/plugin-docker-buildx
     settings:
+      platforms: linux/amd64,linux/arm64
       repo: "${CI_REPO_OWNER}/${CI_REPO_NAME%%-service}"
       tags: "feature-${CI_COMMIT_BRANCH##feature/}"
+      username: 
+        from_secret: docker_username
+      password: 
+        from_secret: docker_password
     secrets: [docker_username, docker_password]
     when:
       event: push
