--- a/.woodpecker/.latest.yml
+++ b/.woodpecker/.latest.yml
@@ -1,10 +1,15 @@
 pipeline:
   build-and-push:
-    image: plugins/docker
+    image: woodpeckerci/plugin-docker-buildx
     settings:
-      repo: "${CI_REPO_OWNER}/${CI_REPO_NAME%%-service}"
+      platforms: linux/amd64,linux/arm64
+      repo: "${CI_REPO_OWNER}/${CI_REPO_NAME}"
       tags: latest
+      username: 
+        from_secret: docker_username
+      password: 
+        from_secret: docker_password
     secrets: [docker_username, docker_password]
     when:
       event: push
-      branch: [master, main]
+      branch: [master, main] 
