--- a/.woodpecker/.tag.yml
+++ b/.woodpecker/.tag.yml
@@ -1,10 +1,15 @@
 pipeline:
-  release:
-    image: plugins/docker
+  build-and-push:
+    image: woodpeckerci/plugin-docker-buildx
     settings:
+      platforms: linux/amd64,linux/arm64
       repo: "${CI_REPO_OWNER}/${CI_REPO_NAME%%-service}"
       tags: "${CI_COMMIT_TAG##v}"
-    secrets: [ docker_username, docker_password ]
+      username: 
+        from_secret: docker_username
+      password: 
+        from_secret: docker_password
+    secrets: [docker_username, docker_password]
     when:
-      event: tag
-      tag: v*
+      event: push
+      branch: v*
