--- a/.woodpecker/.latest.yml
+++ b/.woodpecker/.latest.yml
@@ -3,7 +3,7 @@ pipeline:
     image: woodpeckerci/plugin-docker-buildx
     settings:
       platforms: linux/amd64,linux/arm64
-      repo: "${CI_REPO_OWNER}/${CI_REPO_NAME}"
+      repo: "${CI_REPO_OWNER}/${CI_REPO_NAME%%-service}"
       tags: latest
       username: 
         from_secret: docker_username
