--- a/.woodpecker/.tag.yml
+++ b/.woodpecker/.tag.yml
@@ -11,5 +11,5 @@ pipeline:
         from_secret: docker_password
     secrets: [docker_username, docker_password]
     when:
-      event: push
-      branch: v*
+      event: tag
+      tag: v*
